...
    <string name="common_action_ok">OK</string>
    <string name="common_action_retry">Erneut versuchen</string>
    <string name="common_action_share">Teilen</string>
    <string name="common_action_done">Fertig</string>
    <string name="common_action_continue">Weiter</string>
    <string name="common_action_learn_more">Mehr erfahren</string>
    <string name="common_settings_cd">Einstellungen</string>
    <string name="common_unknown">unbekannt</string>

    <!-- Einheiten. Kommazahlen vorher mit LocalAppFormats formatieren und als %1$s einsetzen. -->
    <string name="common_value_km">%1$s km</string>
    <string name="common_value_kmh">%1$s km/h</string>
    <string name="common_value_elevation">%1$s hm</string>
...
